--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,13 @@ before_install:
   - sudo apt-get -y install docker-ce
   - docker version
   - docker info
+  - export DOCKER_CLI_EXPERIMENTAL=enabled
+  - sudo apt-get install -y qemu-user-static binfmt-support qemu-system-*
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p
+  - docker buildx create --name multibuilder
+  - docker buildx use multibuilder
+  - docker buildx inspect --bootstrap
+  - docker buildx ls
   # prepare docker test requirements
   - make update-dependencies
 
