--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker version
   - docker info
   - export DOCKER_CLI_EXPERIMENTAL=enabled
-  - sudo apt-get install -y qemu-user-static binfmt-support qemu-system-*
+  - sudo apt-get install -y qemu-user-static binfmt-support qemu-kvm qemu-system-*
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p
   - docker buildx create --name multibuilder
   - docker buildx use multibuilder
@@ -28,6 +28,7 @@ before_install:
   - make update-dependencies
 
 script:
+  - bash ./check-qemu.sh
   - make $TEST_TARGET
 
 jobs:
