--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo apt-get -y install docker-ce
   - export DOCKER_CLI_EXPERIMENTAL=enabled
   - sudo apt-get install -y qemu-user-static binfmt-support qemu-kvm qemu-user qemu-system-* 
-  - docker run --rm --privileged multiarch/qemu-user-static --reset -p
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - docker buildx create --name multibuilder
   - docker buildx use multibuilder
   - docker buildx inspect --bootstrap
