--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -160,3 +160,52 @@ jobs:
 
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+  # Push image to GitHub Packages.
+  # See also https://docs.docker.com/docker-hub/builds/
+  hub:
+    # Ensure test job passes before pushing image.
+    needs: test
+
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin  
+      - name: build the stable image
+        run: |
+          docker buildx build \
+          --push -f Dockerfile \
+          --tag adamus1red/nginx-proxy:latest \
+          --tag adamus1red/nginx-proxy:stable \
+          --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7,linux/arm/v6 . 
+      - name: build the alpine stable image
+        run: |
+          docker buildx build \ 
+          --push -f Dockerfile.alpine \
+          --tag adamus1red/nginx-proxy:latest-alpine \
+          --tag adamus1red/nginx-proxy:stable-alpine \
+          --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7,linux/arm/v6 . 
+      - name: build the mainline image
+        run: |
+          docker buildx build \
+          --push -f Dockerfile.mainline \
+          --tag adamus1red/nginx-proxy:mainline \
+          --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7,linux/arm/v6 . 
+      - name: build the alpine mainline image
+        run: |
+          docker buildx build \ 
+          --push -f Dockerfile.mainline.alpine \
+          --tag adamus1red/nginx-proxy:mainline-alpine \
+          --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7,linux/arm/v6 . 
+    
